--- a/templates/racket/racketMain.html
+++ b/templates/racket/racketMain.html
@@ -10,22 +10,23 @@
 
 
 </div>
-    <h1 class="d-flex justify-content-center mt-7 t-text-[70px] bannerfont">테니스 라켓 콘텐츠</h1>
-    <h3 class="d-flex justify-content-center mt-4 t-mb-9 t-text-[20px] bannerfont">Powered by '세상에 나쁜 라켓은 없다' since
+    <h1 class="d-flex justify-content-center mt-7 t-text-[30px] sm:t-text-[50px] lg:t-text-[60px] xl:t-text-[70px] bannerfont">테니스 라켓 콘텐츠</h1>
+    <h3 class="d-flex justify-content-center mt-4 t-mb-9 t-text-[20px] sm:t-text-[20px] lg:t-text-[25px]  bannerfont">Powered by '세상에 나쁜 라켓은 없다'<br> since
         2013</h3>
-    <h4 class="d-flex justify-content-center mt-4 t-mb-9 t-text-[15px] ">라켓은 계속 추가됩니다! ╰( °▽° )╯🧡</h4>
+     <marquee scrollamount=8>
+         <h4 class="mt-4 t-mb-9 t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
+       라켓은 계속 추가됩니다! 🧡╰( °▽° )_🎾</h4></marquee>
 
     <div class="t-grid sm:t-grid-cols-2 py-2 px-2 navbar-dark bg-dark">
-        <div>
-
+        <div class="mb-2">
             <form class="" action="{% url 'racket:racketMain'%}">
-                <input class="form-control-lg t-ml-[3px]" type="search" name="searchKeyword" placeholder="라켓 이름을 적어주세요"
-                       value="{{request.GET.searchKeyword}}">
+                <input class="form-control-lg t-flex-grow t-ml-[3px]" type="search" name="searchKeyword" placeholder="라켓 이름"
+                       value="{{request.GET.searchKeyword}}" style="width:50%">
                 <button type="submit" class="btn btn-warning t-ml-[3px]">검 색</button>
             </form>
         </div>
 
-        <select class="btn btn-warning ml-auto" id="sort-select" onchange="location = this.value;">
+        <select class="btn btn-dark ml-auto" id="sort-select" style="" onchange="location = this.value;">
             <option class="none" value="/">전체정렬</option>
             <option class="sort-id" value="?sort=id">아이디순</option>
             <option class="sort-likes" value="?sort=names">이름순</option>
@@ -47,9 +48,9 @@
                 </a>
 
 
-                <div class="d-flex justify-content-center t-bg-gray-300 ">
+                <div class="d-flex justify-content-center t-bg-gray-300 t-text-[15px]">
                     <ul>
-                        <li> {{item.name}} ({{item.regDateInt}}년) </li>
+                        <li> {{item.manufacturer}} ({{item.regDateInt}}년형)<br> - {{item.name}}  </li>
                         <li>세나라 평점 :
                             {% if item.detail.adminAvgScore %}
                             <span class="t-text-red-500">[ {{item.detail.adminAvgScore|floatformat:"1"}} ]</span>
@@ -72,6 +73,44 @@
             {% endfor %}
         </ul>
     </section>
+    
+     <!-- 페이징처리 시작 -->
+    <ul class="pagination justify-content-center my-5">
+        <!-- 이전페이지 -->
+        {% if racketItems.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ racketItems.previous_page_number }}">◀</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">◁</a>
+        </li>
+        {% endif %}
+        <!-- 페이지리스트 -->
+        {% for page_number in racketItems.paginator.page_range %}
+            {% if page_number == racketItems.number %}
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            </li>
+            {% endif %}
+        {% endfor %}
+        <!-- 다음페이지 -->
+        {% if racketItems.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ racketItems.next_page_number }}">▶</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">▷</a>
+        </li>
+        {% endif %}
+    </ul>
+    <!-- 페이징처리 끝 -->
+    
 
 
 </div>
