--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,8 @@
 
     <script src="{%static 'main.js'%}" defer></script>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 </head>
 
@@ -33,38 +35,28 @@
 {% endfor %}
 {% endif %}
 
-
 <nav class="navbar navbar-expand-md navbar-dark bg-danger mb-5">
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-
-        <a class="navbar-brand " href="{%url 'racket:racketMain'%} ">K라켓 위키</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{%url 'racket:racketMain'%}">K 라켓 위키</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-                <a class="nav-link" href="#">라켓<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">스트링</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">About 세나라</a>
-            </li>
-        </ul>
-        <!--        <form class="form-inline mt-2 mt-md-0">-->
-        <!--          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
-        <!--          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
-        <!--        </form>-->
-    </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" aria-current="page" href="{%url 'racket:racketMain'%}">라켓</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">스트링</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About 세나라</a>
 
+            </div>
+        </div>
+    </div>
     <div class="t-bg-gray-500">
 
         {%if user.is_authenticated%}
 
-        <a href="{%url 'account:logOut'%}">
-            <button type="button" class="btn btn-dark">로그인중 ({{user.username}}) ▶ 클릭시 로그아웃</button>
+        <a href="{%url 'account:logOut'%}" >
+            <button type="button" class="btn btn-dark text-nowrap">접속중 : ({{user.username}})</button>
         </a>
 
         {% else %}
@@ -76,6 +68,8 @@
 
     </div>
 </nav>
+
+
 
 
 {% block content %}
