--- a/base/static/common.css
+++ b/base/static/common.css
@@ -14,6 +14,10 @@
   display: block;
 }
 
+.t-inline-block {
+  display: inline-block;
+}
+
 .t-grid {
   display: grid;
 }
@@ -22,8 +26,16 @@
   display: none;
 }
 
+.t-h-\[22px\] {
+  height: 22px;
+}
+
 .t-w-full {
   width: 100%;
+}
+
+.t-w-\[22px\] {
+  width: 22px;
 }
 
 .t-flex-grow {
@@ -40,6 +52,10 @@
 
 .t-whitespace-nowrap {
   white-space: nowrap;
+}
+
+.t-rounded-full {
+  border-radius: 9999px;
 }
 
 .t-bg-gray-500 {
