--- a/base/static/common.css
+++ b/base/static/common.css
@@ -1,13 +1,22 @@
-.t-mt-\[100px\] {
-  margin-top: 100px;
+.t-my-\[50px\] {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .t-mb-9 {
   margin-bottom: 2.25rem;
 }
 
+.t-mt-\[100px\] {
+  margin-top: 100px;
+}
+
 .t-ml-\[3px\] {
   margin-left: 3px;
+}
+
+.t-mt-\[50px\] {
+  margin-top: 50px;
 }
 
 .t-block {
@@ -30,12 +39,12 @@
   height: 22px;
 }
 
-.t-w-full {
-  width: 100%;
-}
-
 .t-w-\[22px\] {
   width: 22px;
+}
+
+.t-w-full {
+  width: 100%;
 }
 
 .t-flex-grow {
@@ -82,30 +91,34 @@
   font-size: 30px;
 }
 
-.t-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.t-text-\[11px\] {
+  font-size: 11px;
 }
 
-.t-text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.t-text-\[25px\] {
+  font-size: 25px;
 }
 
 .t-text-\[10px\] {
   font-size: 10px;
 }
 
+.t-text-\[15px\] {
+  font-size: 15px;
+}
+
+.t-text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .t-text-\[20px\] {
   font-size: 20px;
 }
 
-.t-text-\[11px\] {
-  font-size: 11px;
-}
-
-.t-text-\[15px\] {
-  font-size: 15px;
+.t-text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .t-leading-normal {
@@ -225,24 +238,36 @@ html > body .hidden{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .sm\:t-text-\[50px\] {
+    font-size: 50px;
+  }
+
+  .sm\:t-text-\[13px\] {
+    font-size: 13px;
+  }
+
+  .sm\:t-text-\[45px\] {
+    font-size: 45px;
+  }
+
   .sm\:t-text-\[40px\] {
     font-size: 40px;
+  }
+
+  .sm\:t-text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .sm\:t-text-\[25px\] {
+    font-size: 25px;
   }
 
   .sm\:t-text-\[12px\] {
     font-size: 12px;
   }
 
-  .sm\:t-text-\[50px\] {
-    font-size: 50px;
-  }
-
   .sm\:t-text-\[20px\] {
     font-size: 20px;
-  }
-
-  .sm\:t-text-\[13px\] {
-    font-size: 13px;
   }
 }
 
@@ -257,6 +282,18 @@ html > body .hidden{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:t-text-\[60px\] {
+    font-size: 60px;
+  }
+
+  .lg\:t-text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .lg\:t-text-\[55px\] {
+    font-size: 55px;
+  }
+
   .lg\:t-text-\[50px\] {
     font-size: 50px;
   }
@@ -265,22 +302,22 @@ html > body .hidden{
     font-size: 13px;
   }
 
-  .lg\:t-text-\[60px\] {
-    font-size: 60px;
-  }
-
   .lg\:t-text-\[25px\] {
     font-size: 25px;
   }
 
-  .lg\:t-text-\[15px\] {
-    font-size: 15px;
+  .lg\:t-text-\[45px\] {
+    font-size: 45px;
   }
 }
 
 @media (min-width: 1280px) {
   .xl\:t-grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .xl\:t-text-\[70px\] {
+    font-size: 70px;
   }
 
   .xl\:t-text-\[50px\] {
@@ -290,8 +327,6 @@ html > body .hidden{
   .xl\:t-text-\[15px\] {
     font-size: 15px;
   }
-
-  .xl\:t-text-\[70px\] {
-    font-size: 70px;
-  }
 }
+
+
