--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -17,11 +17,22 @@
 
             <div class="my-3">
                 <div>
-                    <div class="fadein t-text-[30px] sm:t-text-[40px] lg:t-text-[50px] xl:t-text-[50px] m-3 fw-bold mx-auto t-whitespace-nowrap">- {{racketItems.name}} -</div>
+                    <div class="fadein t-text-[30px] sm:t-text-[40px] lg:t-text-[50px] xl:t-text-[50px] m-3 fw-bold mx-auto t-whitespace-nowrap">
+                        - {{racketItems.name}} -
+                    </div>
                 </div>
                 <div class="card t-tm-3 t-bg-white t-text-black">
                     <div class="card-header">
-                        <img class="fadein" src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1"   width="50%">
+                        <div><img class="fadein" src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1" width="50%"></div><br>
+                        <div class="t-text-[10px] sm:t-text-[15px]">
+                            <span class="t-text-[15px] sm:t-text-[25px]">{{racketItems.manufacturer}}</span><br>
+                        <span>무게 : {{racketItems.weight}} gr</span><br>
+                        <span>패턴 : {{racketItems.pattern}}</span><br>
+                        <span>헤드사이즈 : {{racketItems.headsize}} sq</span><br>
+                        <span>길이 : {{racketItems.length}} in</span><br>
+                        <span>밸런스 : {{racketItems.balance}} mm</span></div>
+
+
                     </div>
                     <div class="t-grid-cols-7"> <!-- 추천영역 -->
                         {% if user.is_authenticated %}
@@ -38,12 +49,12 @@
                         {% if racketDetailItems %}
                         {%for item1 in racketDetailItems%}
                         <ul>
-                            <li>=리뷰= {{item1.adminReview|linebreaks}}</li>
-                            <li>파워  :  {{item1.adminPower|floatformat:"0"}}점</li>
-                            <li>스핀  :  {{item1.adminSpin|floatformat:"0"}}점</li>
-                            <li>조작성  :  {{item1.adminManeuverability|floatformat:"0"}}점</li>
-                            <li>안정성  :  {{item1.adminStability|floatformat:"0"}}점</li>
-                            <li>편안함  :  {{item1.adminComfort|floatformat:"0"}}점</li>
+                            <li class ="container">=리뷰= {{item1.adminReview|linebreaks}}</li>
+                            <li>파워 : {{item1.adminPower|floatformat:"0"}}점</li>
+                            <li>스핀 : {{item1.adminSpin|floatformat:"0"}}점</li>
+                            <li>조작성 : {{item1.adminManeuverability|floatformat:"0"}}점</li>
+                            <li>안정성 : {{item1.adminStability|floatformat:"0"}}점</li>
+                            <li>편안함 : {{item1.adminComfort|floatformat:"0"}}점</li>
 
                         </ul>
 
@@ -52,7 +63,7 @@
 
 
                     <div class="card-footer border t-grid sm:t-grid-cols-2 t-text-2xl t-leading-relaxed my-3">
-                        <div class="my-4">
+                        <div class="my-4 t-text-[20px] sm:t-text-[25px] ">
                             {% if racketDetailItems %}
                             {%for item1 in racketDetailItems%}
                             <div>
@@ -64,18 +75,19 @@
                             {%endfor%}
                             {%else%}
                             <div>
-                             <span class="t-text-2xl t-leading-relaxed">
+                             <span class="t-text-[20px] sm:t-text-[25px] t-leading-relaxed">
                              이 라켓에 대해<br>🎾세나라팀은 <br> 아직 평가 전입니다.😪<br></span>
                             </div>
                             {%endif%}
                         </div>
-                        <div class="my-4">
+                        <div class="my-4 t-text-[20px] sm:t-text-[25px]">
                             {% if racketAvgScoreItem.visitorScore__avg %}
                             이 라켓에 대한<br>😀사용자 평점은<br>
-                            <span class="t-text-red-500"><b>[{{racketAvgScoreItem.visitorScore__avg|floatformat:"1"}}]</b></span>점<br>
+                            <span class="t-text-red-500 "><b>[{{racketAvgScoreItem.visitorScore__avg|floatformat:"1"}}]</b></span>점<br>
                             입니다.<br>
                             {%else%}
-                            이 라켓에 대한<br>사용자 평점이<br> 아직 없습니다😥<br>
+                            <span class="t-text-[20px] sm:t-text-[25px]">이 라켓에 대한<br>사용자 평점이<br> 아직 없습니다😥<br></span>
+
                             {%endif%}
                         </div>
                     </div>
@@ -84,9 +96,9 @@
 
                 <div class="card t-tm-3 ">
 
-                    <h3 class="my-4 t-text-2xl">이 라켓 어떠셨나요?<br>의견을 댓글로 남겨주세요!<br>
+                    <h3 class="my-4 t-text-[20px] sm:t-text-[25px]">이 라켓 어떠셨나요?<br>의견을 댓글로 남겨주세요!<br>
                         <img src="https://media1.giphy.com/media/uADTQTTlpQWeydiHfs/giphy.gif?cid=790b76116267b3b683d11414f434288099844816cf9d736c&rid=giphy.gif&ct=g"
-                             width="200" class="mt-2 fadein">
+                             width="200" class="mt-3 fadein">
                     </h3>
 
                     <div class="card-footer">
@@ -115,7 +127,7 @@
                         <label for="id_content"></label><br>
 
                         <input type="text" name="visitorReview" class="t-flex-grow textReview"
-                               placeholder="한줄평을 작성해주세요"
+                               placeholder="한줄평을 작성해주세요(최대 100자)" maxlength="100"
                                style="width:74%" required id="id_content"><br><br>
 
 
@@ -127,7 +139,8 @@
 
                     {%else%}
                     <div>로그인 후 이용할 수 있습니다.
-                        <a href="{%url 'account:kakaologin'%}"> <img src="https://i.imgur.com/zBJaCQd.png" width="60"></a></div>
+                        <a href="{%url 'account:kakaologin'%}"> <img src="https://i.imgur.com/zBJaCQd.png"
+                                                                     width="60"></a></div>
                     {%endif%}
 
                 </div>
@@ -138,7 +151,9 @@
                 <div class="card-footer">
                     <table class="table table-hover">
                         <thead class="my-4">
-                        <caption class="t-text-[10px] sm:t-text-[12px] lg:t-text-[13px] xl:t-text-[15px]">비방성, 광고성 등 취지와 관계없는 글은 안내없이 삭제될 수 있습니다.</caption>
+                        <caption class="t-text-[10px] sm:t-text-[12px] lg:t-text-[13px] xl:t-text-[15px]">비방성, 광고성 등 취지와
+                            관계없는 글은 안내없이 삭제될 수 있습니다.
+                        </caption>
 
 
                         <tr class="table-info t-text-[10px] sm:t-text-[12px] lg:t-text-[13px] xl:t-text-[15px]">
@@ -155,28 +170,33 @@
 
                         <tr class="reviewTr{{item1.id}} t-text-[10px] sm:t-text-[12px] lg:t-text-[13px] xl:t-text-[15px]">
                             <td>{{item1.visitorScore|floatformat:"0"}}점</td>
-                            <td class="d-flex justify-content-center">
+                            <td class="d-flex justify-content-center" align="left">
                                 <span class="showReview{{ item1.id }} ">{{item1.visitorReview}}</span><br>
                                 <input type="text" style="width:100%" class="hidden classInputReview{{item1.id}} "
-                                       value="{{item1.visitorReview}}" >
+                                       value="{{item1.visitorReview}}">
 
                             </td>
                             <td>
-<!--                                <span class="spanVisitorAccount">{{item1.visitorAccount.name}}</span>-->
-                                <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block" src="{{ item1.visitorAccount.profile_img.url }}"/>
-                                                            <span class="control hidden" id="control_id{{ forloop.counter0 }}">
+                                <span class="t-hidden spanVisitorAccount">{{item1.visitorAccount.username}}</span>
+                                <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block"
+                                     src="{{ item1.visitorAccount.profile_img.url }}"/>
+                                <span class="control hidden" id="control_id{{ forloop.counter0 }}">
                                 <ul class="d-flex justify-content-center">
                                     <li class="modifyReview{{ item1.id }}">
-                                        <input type="button" class="btn btn-light" value="수정" onclick="onModifyReview({{ item1.id }})">
+                                        <input type="button" class="btn btn-light" value="수정"
+                                               onclick="onModifyReview({{ item1.id }})">
                                     </li>
                                     <li class="deleteReview{{ item1.id }}">
-                                        <input type="button" class="btn btn-light" value="삭제" onclick="onDeleteReview({{ item1.id }}), window.location.reload()">
+                                        <input type="button" class="btn btn-light" value="삭제"
+                                               onclick="onDeleteReview({{ item1.id }}), window.location.reload()">
                                     </li>
                                     <li class="submitModify{{ item1.id }}" style="display:none">
-                                        <input type="button" class="btn btn-success" value="수정완료" onclick="onSubmitModify({{ item1.id }}), window.location.reload()">
+                                        <input type="button" class="btn btn-success" value="수정완료"
+                                               onclick="onSubmitModify({{ item1.id }}), window.location.reload()">
                                     </li>
                                     <li class="cancelModify{{ item1.id }}" style="display:none">
-                                        <input type="button" class="btn btn-light" value="취소" onclick="onCancelModify({{ item1.id }})">
+                                        <input type="button" class="btn btn-light" value="취소"
+                                               onclick="onCancelModify({{ item1.id }})">
                                     </li>
 
                                 </ul>
@@ -188,7 +208,9 @@
                         {%else%}
                         <tr>
                             <td></td>
-                            <td class="t-text-[10px] sm:t-text-[12px] lg:t-text-[13px] xl:t-text-[15px]">사용후기가 없어요. 제일 먼저 의견을 남겨주세요!</td>
+                            <td class="t-text-[10px] sm:t-text-[12px] lg:t-text-[13px] xl:t-text-[15px]">사용후기가 없어요. 제일
+                                먼저 의견을 남겨주세요!
+                            </td>
                         </tr>
                         {%endif%}
 
@@ -200,6 +222,7 @@
         </div>
     </div>
     <span class="t-hidden" id="spanUserName">{{ user.username }}</span>
+</div>
 
     {% endblock %}
 
@@ -324,6 +347,7 @@ const onCancelModify = (id) => {
 
   //classInputReview.readOnly=false;
 }
+
 
 
 
