--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -192,7 +192,7 @@
                                     </li>
                                     <li class="submitModify{{ item1.id }}" style="display:none">
                                         <input type="button" class="btn btn-success" value="수정완료"
-                                               onclick="onSubmitModify({{ item1.id }}), window.location.reload()">
+                                               onclick="onSubmitModify({{ item1.id }}), window.location.reload(true)">
                                     </li>
                                     <li class="cancelModify{{ item1.id }}" style="display:none">
                                         <input type="button" class="btn btn-light" value="취소"
