라켓이미지추가

--- a/templates/main.html
+++ b/templates/main.html
@@ -9,11 +9,11 @@
         세상에 나쁜 라켓은 없다<br></h1>
 
     <marquee scrollamount=8>
-        <h4 class="mt-4 t-mb-9 t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
-            🤗테린이부터 테고수까지 모두의 사랑방입니다🤗 리뷰는 계속 추가됩니다 🧡╰( °▽° )_🎾</h4></marquee>
+        <h4 class="mt-3 t-mb-9 t-text-[11px] sm:t-text-[13px] lg:t-text-[15px]">
+            🤗테린이부터 테고수까지 모두의 사랑방🤗 리뷰는 계속 추가됩니다 🧡╰( °▽° )_🎾</h4></marquee>
 </div>
 
-<div class="mt-3 d-flex justify-content-center mt-7 t-text-[25px] sm:t-text-[40px] lg:t-text-[45px] ">[신규 등록된 리뷰]</div>
+<div class="mt-5 d-flex justify-content-center mt-7 t-text-[25px] sm:t-text-[40px] lg:t-text-[45px] ">[신규 등록된 리뷰]</div>
 
 
 <div class="">
