--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -184,19 +184,19 @@
                                 <ul class="d-flex justify-content-center">
                                     <li class="modifyReview{{ item1.id }}">
                                         <input type="button" class="btn btn-light" value="수정"
-                                               onclick="onModifyReview({{ item1.id }})">
+                                               onclick="onModifyReview({{ item1.id }})" style="font-size:50%">
                                     </li>
                                     <li class="deleteReview{{ item1.id }}">
                                         <input type="button" class="btn btn-light" value="삭제"
-                                               onclick="onDeleteReview({{ item1.id }}), window.location.reload()">
+                                               onclick="onDeleteReview({{ item1.id }}), window.location.reload()" style="font-size:50%">
                                     </li>
                                     <li class="submitModify{{ item1.id }}" style="display:none">
                                         <input type="button" class="btn btn-success" value="수정완료"
-                                               onclick="onSubmitModify({{ item1.id }}), window.location.reload(true)">
+                                               onclick="onSubmitModify({{ item1.id }}), window.location.reload(true)" style="font-size:50%">
                                     </li>
                                     <li class="cancelModify{{ item1.id }}" style="display:none">
                                         <input type="button" class="btn btn-light" value="취소"
-                                               onclick="onCancelModify({{ item1.id }})">
+                                               onclick="onCancelModify({{ item1.id }})" style="font-size:50%">
                                     </li>
 
                                 </ul>
