--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -23,14 +23,16 @@
                 </div>
                 <div class="card t-tm-3 t-bg-white t-text-black">
                     <div class="card-header">
-                        <div><img class="fadein" src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1" width="50%"></div><br>
+                        <div><img class="fadein" src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1"
+                                  width="50%"></div>
+                        <br>
                         <div class="t-text-[10px] sm:t-text-[15px]">
                             <span class="t-text-[15px] sm:t-text-[25px]">{{racketItems.manufacturer}}</span><br>
-                        <span>무게 : {{racketItems.weight}} gr</span><br>
-                        <span>패턴 : {{racketItems.pattern}}</span><br>
-                        <span>헤드사이즈 : {{racketItems.headsize}} sq</span><br>
-                        <span>길이 : {{racketItems.length}} in</span><br>
-                        <span>밸런스 : {{racketItems.balance}} mm</span></div>
+                            <span>무게 : {{racketItems.weight}} gr</span><br>
+                            <span>패턴 : {{racketItems.pattern}}</span><br>
+                            <span>헤드사이즈 : {{racketItems.headsize}} sq</span><br>
+                            <span>길이 : {{racketItems.length}} in</span><br>
+                            <span>밸런스 : {{racketItems.balance}} mm</span></div>
 
 
                     </div>
@@ -49,7 +51,7 @@
                         {% if racketDetailItems %}
                         {%for item1 in racketDetailItems%}
                         <ul>
-                            <li class ="container">=리뷰= {{item1.adminReview|linebreaks}}</li>
+                            <li class="container">=리뷰= {{item1.adminReview|linebreaks}}</li>
                             <li>파워 : {{item1.adminPower|floatformat:"0"}}점</li>
                             <li>스핀 : {{item1.adminSpin|floatformat:"0"}}점</li>
                             <li>조작성 : {{item1.adminManeuverability|floatformat:"0"}}점</li>
@@ -96,46 +98,46 @@
 
                 <div class="card t-tm-3 ">
 
-                    <h3 class="my-4 t-text-[20px] sm:t-text-[25px]">이 라켓 어떠셨나요?<br>의견을 댓글로 남겨주세요!<br>
+                    <h4 class="my-4 t-text-[20px] sm:t-text-[25px]">이 라켓 어떠셨나요?<br>의견을 댓글로 남겨주세요!<br>
                         <img src="https://media1.giphy.com/media/uADTQTTlpQWeydiHfs/giphy.gif?cid=790b76116267b3b683d11414f434288099844816cf9d736c&rid=giphy.gif&ct=g"
                              width="200" class="mt-3 fadein">
-                    </h3>
+                    </h4>
+                    <div class="reviewForm">
+                        <div class="card-footer">
+                            {% if user.is_authenticated %}
+                            <div class="col text-center"></div>
+                            <form class="rate-form" action="" method="POST" id="1">
+                                {% csrf_token%}
+                                <button type="submit" class="fa fa-star fa-2x my-btn " id="first"></button>
+                                <button type="submit" class="fa fa-star fa-2x my-btn" id="second"></button>
+                                <button type="submit" class="fa fa-star fa-2x my-btn" id="third"></button>
+                                <button type="submit" class="fa fa-star fa-2x my-btn" id="fourth"></button>
+                                <button type="submit" class="fa fa-star fa-2x my-btn" id="fifth"></button>
+                            </form>
+                        </div>
+                        <br>
+                        <div id="confirm-box">별을 눌러서 점수를 매겨주세요!</div>
 
-                    <div class="card-footer">
-                        {% if user.is_authenticated %}
-                        <div class="col text-center"></div>
-                        <form class="rate-form" action="" method="POST" id="1">
-                            {% csrf_token%}
-                            <button type="submit" class="fa fa-star fa-2x my-btn " id="first"></button>
-                            <button type="submit" class="fa fa-star fa-2x my-btn" id="second"></button>
-                            <button type="submit" class="fa fa-star fa-2x my-btn" id="third"></button>
-                            <button type="submit" class="fa fa-star fa-2x my-btn" id="fourth"></button>
-                            <button type="submit" class="fa fa-star fa-2x my-btn" id="fifth"></button>
+
+                        <form action="{% url 'visitor:newReview' racketItems.id %}" method="POST">
+
+                            {%csrf_token%}
+
+                            <div class="d-flex"><input id="inputNumForm" name="visitorScore" class="scoreReview"
+                                                       value="0"
+                                                       type="hidden"></div>
+                            <label for="id_content"></label><br>
+
+                            <input type="text" name="visitorReview" class="t-flex-grow textReview"
+                                   placeholder="한줄평을 작성해주세요(최대 100자)" maxlength="100"
+                                   style="width:74%" required id="id_content"><br><br>
+
+
+                            <button type="submit" class="btn btn-success mb-2 reviewSubmit">
+                                리뷰 제출
+                            </button>
                         </form>
                     </div>
-                    <br>
-                    <div id="confirm-box">별을 눌러서 점수를 매겨주세요!</div>
-
-
-                    <form action="{% url 'visitor:newReview' racketItems.id %}" method="POST">
-
-                        {%csrf_token%}
-
-                        <div class="d-flex"><input id="inputNumForm" name="visitorScore" class="scoreReview"
-                                                   value="0"
-                                                   type="hidden"></div>
-                        <label for="id_content"></label><br>
-
-                        <input type="text" name="visitorReview" class="t-flex-grow textReview"
-                               placeholder="한줄평을 작성해주세요(최대 100자)" maxlength="100"
-                               style="width:74%" required id="id_content"><br><br>
-
-
-                        <button type="submit" class="btn btn-success mb-2">
-                            리뷰 제출
-                        </button>
-                    </form>
-
 
                     {%else%}
                     <div>로그인 후 이용할 수 있습니다.
@@ -188,11 +190,13 @@
                                     </li>
                                     <li class="deleteReview{{ item1.id }}">
                                         <input type="button" class="btn btn-light" value="삭제"
-                                               onclick="onDeleteReview({{ item1.id }}), window.location.reload()" style="font-size:50%">
+                                               onclick="onDeleteReview({{ item1.id }}), window.location.reload()"
+                                               style="font-size:50%">
                                     </li>
                                     <li class="submitModify{{ item1.id }}" style="display:none">
                                         <input type="button" class="btn btn-success" value="수정완료"
-                                               onclick="onSubmitModify({{ item1.id }}), window.location.reload(true)" style="font-size:50%">
+                                               onclick="onSubmitModify({{ item1.id }}), window.location.reload(true)"
+                                               style="font-size:50%">
                                     </li>
                                     <li class="cancelModify{{ item1.id }}" style="display:none">
                                         <input type="button" class="btn btn-light" value="취소"
@@ -224,11 +228,11 @@
     <span class="t-hidden" id="spanUserName">{{ user.username }}</span>
 </div>
 
-    {% endblock %}
+{% endblock %}
 
 
-    {% block script %}
-    <script type='text/javascript'>
+{% block script %}
+<script type='text/javascript'>
 
 $("#spanUserName").text() //# = 태그의 아이디로서 태그값을 가져온다.
 $(".spanVisitorAccount") //. = 태그의 클래스로서 태그값을 가져온다
@@ -237,8 +241,14 @@ $(".spanVisitorAccount")[0].innerHTML
 for(i = 0; i < $(".spanVisitorAccount").length; i++){
   if($("#spanUserName").text() == $(".spanVisitorAccount")[i].innerHTML){
     $("#control_id"+i).removeClass("hidden");
+    $(".reviewForm").addClass("hidden");
+    $("h4").html("✅이미 리뷰를 남기셨습니다.");
+
   }
 }
+
+
+
 
 
 const onModifyReview = (id) => {
@@ -351,6 +361,7 @@ const onCancelModify = (id) => {
 
 
 
-    </script>
 
-    {% endblock %}
+</script>
+
+{% endblock %}
